Se añadió el formulario para los de bedrock y mejoras en las Task